; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/binutils/extr_ar.c_ranlib_only.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/binutils/extr_ar.c_ranlib_only.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@write_armap = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @ranlib_only to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ranlib_only(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = call i32 @get_file_size(i8* %5)
  %7 = icmp slt i32 %6, 1
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store i32 1, i32* %2, align 4
  br label %19

9:                                                ; preds = %1
  store i32 1, i32* @write_armap, align 4
  %10 = load i8*, i8** %3, align 8
  %11 = call i32* @open_inarch(i8* %10, i8* null)
  store i32* %11, i32** %4, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = icmp eq i32* %12, null
  br i1 %13, label %14, label %16

14:                                               ; preds = %9
  %15 = call i32 @xexit(i32 1)
  br label %16

16:                                               ; preds = %14, %9
  %17 = load i32*, i32** %4, align 8
  %18 = call i32 @write_archive(i32* %17)
  store i32 0, i32* %2, align 4
  br label %19

19:                                               ; preds = %16, %8
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}

declare dso_local i32 @get_file_size(i8*) #1

declare dso_local i32* @open_inarch(i8*, i8*) #1

declare dso_local i32 @xexit(i32) #1

declare dso_local i32 @write_archive(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
